2008-06-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/PaintScaleLegend.java
    (subdivisions): New field,
    (PaintScaleLegend): Initialise new field,
    (getSubdivisionCount): New method,
    (setSubdivisionCount): Likewise,
    (SUBDIVISIONS): Removed private field,
    (draw): Modified segment calculations,
    (equals): Updated for new field.

2008-06-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYDrawableAnnotation.java
    (drawScaleFactor): New field,
    (width): Renamed displayWidth,
    (height): Renamed displayHeight,
    (XYDrawableAnnotation(double, double, double, double, double, Drawable)): 
    New constructor,
    (draw): Apply scaling transform,
    (equals): Check drawScaleFactor field,
    (hashCode): Updated for renamed fields.

2008-06-17  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/LegendItem.java
    (labelFont): New field,
    (labelPaint): Likewise,
    (getLabelFont): New method,
    (setLabelFont): Likewise,
    (getLabelPaint): Likewise,
    (setLabelPaint): Likewise,
    (setFillPaint): Likewise,
    (setLinePaint): Likewise,
    (setOutlinePaint): Likewise,
    (equals): Test new fields,
    (writeObject): Handle new field,
    (readObject): Likewise,
    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (legendShape): New field,
    (baseLegendShape): Likewise,
    (legendTextFont): Likewise,
    (baseLegendTextFont): Likewise,
    (legendTextPaint): Likewise,
    (baseLegendTextPaint): Likewise,
    (AbstractRenderer): Initialise new fields,
    (lookupLegendShape): New method,
    (getLegendShape): Likewise,
    (setLegendShape): Likewise,
    (getBaseLegendShape): Likewise,
    (setBaseLegendShape): Likewise,
    (lookupLegendTextFont): Likewise,
    (getLegendTextFont): Likewise,
    (setLegendTextFont): Likewise,
    (getBaseLegendTextFont): Likewise,